Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
